<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TagRegistrationActivity">

    <!-- Cabeçalho -->
    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="0dp"
        android:layout_height="67dp"
        android:background="#7a52d7"
        android:gravity="center|left"
        android:padding="16dp"
        android:text="Cadastro de TAGs"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <ImageView
        android:id="@+id/resetIcon"
        android:layout_width="54dp"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="50dp"
        android:contentDescription="Reset Icon"
        android:src="@drawable/reset_0"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvHeader" />

    <LinearLayout
        android:id="@+id/fieldsContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="gone"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

                <!-- Campo Código do Produto -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Código do produto"
            android:textSize="16sp"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/etProductCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:cursorVisible="false"
            android:background="@drawable/rounded_edittext"/>

        <!-- Campo Descrição -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Descrição"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:cursorVisible="false"
            android:minLines="3"
            android:maxLines="3"
            android:gravity="top"
            android:background="@drawable/rounded_edittext" />

        <!-- Campo TAGs -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TAGs"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/etTags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:inputType="textMultiLine"
            android:cursorVisible="false"
            android:minLines="5"
            android:maxLines="10"
            android:gravity="top"
            android:scrollbars="vertical"
            android:background="@drawable/rounded_edittext"
            app:layout_constraintTop_toBottomOf="@id/etDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnVincular"
            app:layout_constraintHeight_max="wrap"/>



        <!-- Botão Vincular -->
        <Button
            android:id="@+id/btnVincular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:backgroundTint="#7a52d7"
            android:text="Vincular"
            android:textColor="#FFFFFF" />
    </LinearLayout>
    <!-- Segundo Container para Número da Nota e Itens da Nota -->
    <LinearLayout
        android:id="@+id/fieldsContainer2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="gone"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <!-- Campo Número da Nota -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Número da Nota"
            android:textColor="#000000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etNotaNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:cursorVisible="false"
            android:background="@drawable/rounded_edittext"/>

        <!-- Campo Itens da Nota -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Itens da Nota"
            android:textSize="16sp"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/etItensNota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:cursorVisible="false"
            android:minLines="10"
            android:maxLines="20"
            android:gravity="top"
            android:background="@drawable/rounded_edittext"
            android:layout_marginTop="8dp" />
        <Button
            android:id="@+id/btnVoltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Voltar"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:backgroundTint="#7a52d7"
            android:textColor="#FFFFFF" />

    </LinearLayout>


    <!-- Rodapé -->
    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <!-- Linha divisória superior -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D3D3D3" />

        <!-- Ícones do rodapé -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icon_home"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/home_0"
                android:contentDescription="@string/home"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:clickable="true"
                android:focusable="true" />

            <ImageView
                android:id="@+id/icon_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/busca_1"
                android:contentDescription="@string/busca"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:clickable="true"
                android:focusable="true" />

            <ImageView
                android:id="@+id/icon_query"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/consulta_1"
                android:contentDescription="@string/consulta"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:clickable="true"
                android:focusable="true" />

            <ImageView
                android:id="@+id/icon_inventory"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/inventario_1"
                android:contentDescription="@string/inventario"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:clickable="true"
                android:focusable="true" />

        </LinearLayout>

        <!-- Linha divisória inferior -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D3D3D3" />

    </LinearLayout>

    <!-- Botão Flutuante -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="339dp"
        android:layout_marginTop="592dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="76dp"
        android:contentDescription="@string/add"
        android:src="@drawable/add_0"
        app:backgroundTint="#FF3366"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader"
        app:layout_constraintVertical_bias="0.866" />

</androidx.constraintlayout.widget.ConstraintLayout>
