<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InventoryActivity">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#7a52d7"
        android:gravity="center|left"
        android:padding="16dp"
        android:paddingStart="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tvHeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Inventário"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@+id/voltarIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/icon_header"
        android:layout_width="25dp"
        android:layout_height="20dp"
        android:contentDescription="@string/inventario"
        android:paddingStart="0dp"
        android:src="@drawable/inventario_0"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/tvHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/tvHeaderText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.540" />

    <ImageView
        android:id="@+id/voltarIcon"
        android:layout_width="37dp"
        android:layout_height="39dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="7dp"
        android:contentDescription="@string/icone_voltar"
        android:src="@drawable/voltar_0"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvHeader" />

    <ImageView
        android:id="@+id/resetIcon"
        android:layout_width="54dp"
        android:layout_height="44dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="Reset Icon"
        android:src="@drawable/reset_0"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvHeader" />

    <LinearLayout
        android:id="@+id/fieldsContainer2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="12dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="Relatório de Itens"
            android:textColor="#000000"
            android:textSize="16sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <TableLayout
                android:id="@+id/tblItensRelatorio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:background="#FFF"
                android:padding="4dp"
                android:stretchColumns="1,2,3,4,5">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/textCodigo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start|center_vertical"
                        android:paddingStart="0dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="Código"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textItem"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="start|center_vertical"
                        android:paddingStart="0dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="Item"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textUnidade"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:gravity="start|center_vertical"
                        android:paddingStart="0dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="Un"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        tools:ignore="RtlCompat" />

                    <TextView
                        android:id="@+id/textQuantidade"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:gravity="start|center_vertical"
                        android:paddingStart="0dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="Qtd"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        tools:ignore="RtlCompat" />

                    <TextView
                        android:id="@+id/textTags"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:gravity="start|center_vertical"
                        android:paddingStart="0dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="TAG(s)"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        tools:ignore="RtlCompat" />

                </TableRow>

            </TableLayout>
        </ScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Total de Itens:"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Itens com TAGs:"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/add"
        android:src="@drawable/add_0"
        app:backgroundTint="#40e0d0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader"
        app:layout_constraintVertical_bias="0.809" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="Save"
        android:src="@drawable/disk_0"
        android:visibility="gone"
        app:backgroundTint="#7a52d7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.89"
        app:tint="#FFFFFF" />

    <include
        layout="@layout/footer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
